include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-color-manager
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES =					\
	figures/gcm-adjust.png			\
	figures/gcm-basic.png			\
	figures/gcm-scanner.png			\
	figures/gcm-calibrate-default.png	\
	figures/gcm-calibrate-drawing.png	\
	figures/gcm-print-mode.png		\
	figures/gcm-screen-type.png		\
	figures/gcm-device-configure.png	\
	figures/gcm-set-default.png		\
	figures/gcm-import.png

DOC_LINGUAS = cs de el es id ja ru zh_CN

