@YELP_HELP_RULES@

EXTRA_DIST = C/gnome-help.its

HELP_ID = gnome-color-manager

HELP_LINGUAS = cs de el es fi fr gl hu ml pt_BR zh_CN zh_HK zh_TW

HELP_MEDIA = 

HELP_FILES = \
	legal.xml			\
	color-import-linux.page		\
	color-import-windows.page	\
	color-import-osx.page

CLEANFILES = */*.mo */*.stamp

-include $(top_srcdir)/git.mk
