@YELP_HELP_RULES@

EXTRA_DIST = C/gnome-help.its

HELP_ID = gnome-color-manager

HELP_LINGUAS = ca cs da de el es fi fr gl hu ko ml pt_BR sv zh_CN zh_HK zh_TW

HELP_MEDIA = 

HELP_FILES = \
	legal.xml			\
	color-import-linux.page		\
	color-import-windows.page	\
	color-import-osx.page

CLEANFILES = */*.mo */*.stamp

-include $(top_srcdir)/git.mk
