gnome.yelp('gnome-color-manager',
   sources: [
    'legal.xml',
    'color-import-linux.page',
    'color-import-windows.page',
    'color-import-osx.page',
   ],
   languages: ['ca', 'cs', 'da', 'de', 'el', 'es', 'fi', 'fr', 'gl', 'hu', 'ko', 'ml', 'pl', 'pt_BR', 'sv', 'zh_CN', 'zh_HK', 'zh_TW'],
)
