figuresdir = $(datadir)/gnome-color-manager/figures
figures_DATA = 	 			\
	viewer-example-00.png		\
	viewer-example-01.png		\
	viewer-example-02.png		\
	viewer-example-03.png

iconsdir = $(datadir)/gnome-color-manager/icons
icons_DATA = 	 			\
	clock.svg			\
	calibration-short.svg		\
	calibration-normal.svg		\
	calibration-long.svg		\
	scan-target.svg			\
	scan-target-good.svg		\
	scan-target-bad.svg		\
	i1-pro-attach.svg		\
	huey-attach.svg			\
	dtp94-attach.svg		\
	hcfr-attach.svg			\
	spyder-attach.svg		\
	i1-display3-attach.svg		\
	munki-ambient.svg		\
	munki-attach.svg		\
	munki-calibrate.svg		\
	munki-projector.svg		\
	munki-screen.svg

EXTRA_DIST =				\
	$(icons_DATA)			\
	$(figures_DATA)

