figuresdir = $(datadir)/gnome-color-manager/figures
figures_DATA = 	 			\
	viewer-example-00.png		\
	viewer-example-01.png		\
	viewer-example-02.png		\
	viewer-example-03.png

iconsdir = $(datadir)/gnome-color-manager/icons
icons_DATA = 	 			\
	calibration-long.svg		\
	calibration-normal.svg		\
	calibration-short.svg		\
	clock.svg			\
	dtp94-attach.svg		\
	hcfr-attach.svg			\
	huey-attach.svg			\
	i1-display3-attach.svg		\
	i1-monitor-attach.svg		\
	i1-pro-attach.svg		\
	munki-ambient.svg		\
	munki-attach.svg		\
	munki-calibrate.svg		\
	munki-projector.svg		\
	munki-screen.svg		\
	scan-target-bad.svg		\
	scan-target-good.svg		\
	scan-target.svg			\
	spyder2-attach.svg		\
	spyder3-attach.svg

EXTRA_DIST =				\
	$(icons_DATA)			\
	$(figures_DATA)

