figuresdir = $(datadir)/gnome-color-manager/figures
figures_DATA = 	 			\
	viewer-example-00.png		\
	viewer-example-01.png		\
	viewer-example-02.png		\
	viewer-example-03.png

iconsdir = $(datadir)/gnome-color-manager/icons
icons_DATA = 	 			\
	calibration-long.svg		\
	calibration-normal.svg		\
	calibration-short.svg		\
	clock.svg			\
	scan-target-bad.svg		\
	scan-target-good.svg		\
	scan-target.svg

EXTRA_DIST =				\
	$(icons_DATA)			\
	$(figures_DATA)

