install_data([
  'viewer-example-00.png',
  'viewer-example-01.png',
  'viewer-example-02.png',
  'viewer-example-03.png',
  ],
  install_dir : join_paths(prefixed_datadir, 'gnome-color-manager/figures')
)

install_data([
  'calibration-long.svg',
  'calibration-normal.svg',
  'calibration-short.svg',
  'clock.svg',
  'scan-target-bad.svg',
  'scan-target-good.svg',
  'scan-target.svg',
  ],
  install_dir : join_paths(prefixed_datadir, 'gnome-color-manager/icons')
)
