
icon_sizes = ['16x16', '22x22', '24x24', '32x32', '48x48', '64x64', '256x256']
foreach size: icon_sizes
  install_data([
    size + '/gnome-color-manager.png',
    ],
    install_dir : 'share/gnome-color-manager/icons/hicolor/' + size
  )
endforeach


install_data([
  'scalable/gnome-color-manager.svg',
  ],
  install_dir : 'share/gnome-color-manager/icons/hicolor/scalable'
)

install_data([
  'scalable/lcd.svg',
  'scalable/crt.svg',
  'scalable/projector.svg',
  ],
  install_dir : 'share/gnome-color-manager/icons/icons'
)
